<resources>
    <string name="app_name">Diploma</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_city">City</string>
    <string name="password_reset">Password reset</string>
    <string name="enter_email_reset_password">Enter email to reset password</string>
    <string name="prompt_reset_code">Code</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_first_name">Firstname</string>
    <string name="prompt_last_name">Lastname</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_code">Not a valid code</string>
    <string name="empty_email">Fill in the email field</string>
    <string name="invalid_password">Password must contain at least 8 characters</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="reset">Reset</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_to_supermarket">Login to supermarket</string>
    <string name="register_to_supermarket">Register to supermarket</string>
    <string name="re_send_code">Re-send code</string>
    <string name="edit_profile">Edit profile</string>
    <string name="total">Total:</string>
    <string name="my_purchases">My purchases</string>
    <string name="my_purchase_list">My purchase list</string>
    <string name="change_password">Change password</string>
    <string name="user_profile_name">%1$s %2$s</string>
    <string name="personal_data">Personal data</string>
    <string name="save">Save</string>
    <string name="username_exists">Username exists</string>
    <string name="email_exists">Email exists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_change">Password_change</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="purchase_list_total">Total: %1$s KZT</string>
    <string name="history_list_item_price">%1$s KZT</string>
</resources>