<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/registration_logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_marginStart="36dp"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/registration_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_to_supermarket"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <ScrollView
        android:id="@+id/registration_form_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/registration_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context=".ui.registration.RegistrationActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_first_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_first_name"
                app:startIconDrawable="@drawable/ic_person"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/cod_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_last_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_last_name"
                app:startIconDrawable="@drawable/ic_person"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cod_gray"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_username_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_account"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cod_gray"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_mail"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cod_gray"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_password"
                app:passwordToggleEnabled="true"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/cod_gray" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_password2_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_confirm_password"
                app:startIconDrawable="@drawable/ic_password"
                app:passwordToggleEnabled="true"
                style="@style/TextInputStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/cod_gray"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@drawable/background_button"/>

    <ProgressBar
        android:id="@+id/registration_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>