<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.PasswordEditFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/password_change"
                app:navigationIcon="@drawable/ic_arrow_left"
                android:background="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_current_password"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_password"
            app:passwordToggleEnabled="true"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/cod_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password1_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/ic_password"
            app:passwordToggleEnabled="true"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/cod_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_password2_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_confirm_password"
            app:startIconDrawable="@drawable/ic_password"
            app:passwordToggleEnabled="true"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cod_gray"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_password_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:background="@drawable/background_button"/>

        <ProgressBar
            android:id="@+id/edit_password_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</layout>