<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/password_reset_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_reset_password"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_reset_code_edit_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_reset_text_view"
            android:hint="@string/prompt_reset_code"
            app:startIconDrawable="@drawable/ic_code"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reset_code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cod_gray"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_reset_password1_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_reset_code_edit_text_container"
            app:startIconDrawable="@drawable/ic_password"
            app:passwordToggleEnabled="true"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reset_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cod_gray"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_reset_password2_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_reset_password1_container"
            app:startIconDrawable="@drawable/ic_password"
            app:passwordToggleEnabled="true"
            style="@style/TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_reset_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cod_gray"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/reset"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/background_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_reset_password2_container"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/reset_password_resend_code_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_send_code"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@id/password_reset_password2_container"
            app:layout_constraintStart_toEndOf="@id/reset_password_button"
            app:layout_constraintTop_toTopOf="@id/reset_password_button"
            app:layout_constraintBottom_toBottomOf="@id/reset_password_button"
            android:focusable="true" />

        <ProgressBar
            android:id="@+id/password_reset_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password_reset_code_edit_text_container"
            app:layout_constraintStart_toStartOf="@+id/password_reset_code_edit_text_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>